--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,17 +1,20 @@
 @use "/src/sass/base/reset";
 
 header {
-	display: flex;
-	justify-content: space-between;
 
-	background-color: burlywood;
-
-	width: 100%;
-	padding: 1rem 3rem;
-
-	span {
+	section {
 		display: flex;
-		gap: 1.6rem;
-		align-items: center;
+		justify-content: space-between;
+
+		background-color: burlywood;
+	
+		width: 100%;
+		padding: 1rem 3rem;
+	
+		span {
+			display: flex;
+			gap: 1.6rem;
+			align-items: center;
+		}
 	}
 }
