--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,7 @@ header {
 	section {
 		display: flex;
 		justify-content: space-between;
+		align-items: center;
 
 		background-color: burlywood;
 	
