--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,12 +2,13 @@
 
 header {
 
-	section {
+	section:first-child {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 
-		background-color: burlywood;
+		background-color: rgb(42, 42, 42);
+		color: white;
 	
 		width: 100%;
 		padding: 1rem 3rem;
