--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,21 +2,23 @@
 
 header {
 
-	section:first-child {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
+	background-color: #1b1a1d;
+	color: white;
 
-		background-color: rgb(42, 42, 42);
-		color: white;
-	
-		width: 100%;
+	section:first-child {
+		display: grid;
+		grid-template-columns: 1fr 3fr 1fr;
+		align-items: center;
+		justify-items: center;
+		gap: 1rem;
+
 		padding: 1rem 3rem;
 	
 		span {
 			display: flex;
 			gap: 1.6rem;
 			align-items: center;
+			min-width: fit-content;
 		}
 	}
 }
