--- a/src/components/CategoryRow/CategoryRow.scss
+++ b/src/components/CategoryRow/CategoryRow.scss
@@ -12,6 +12,12 @@
 		li {
 			display: flex;
 			align-items: center;
+			padding: 0 1rem;
+
+			&:hover {
+				background-color: #202020;
+				cursor: default;
+			}
 		}
 	}
 }
