--- a/src/components/CategoryRow/CategoryRow.scss
+++ b/src/components/CategoryRow/CategoryRow.scss
@@ -4,7 +4,6 @@
 
 	ul {
 		display: flex;
-		gap: 2em;
 		list-style-type: none;
 		justify-content: center;
 		height: 100%;
@@ -12,7 +11,7 @@
 		li {
 			display: flex;
 			align-items: center;
-			padding: 0 1rem;
+			padding: 0 2em;
 
 			&:hover {
 				background-color: #202020;
