--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,9 +1,9 @@
 .Cart {
-
 	flex-shrink: 0;
-	height: 64px;
 	aspect-ratio: 1/1;
 
+	filter: grayscale(100%) brightness(25%);
+		
 	&:hover {
 		color: rgb(194, 194, 194);
 	}
