--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 
 	background-color: #1b1a1d;
 	color: white;
@@ -9,12 +10,4 @@
 	height: 300px;
 
 	text-align: center;
-
-	*:not(p) {
-		margin: 1rem 0;
-	}
-
-	ul {
-		list-style-type: none;
-	}
 }
