--- a/src/components/Socials/Socials.scss
+++ b/src/components/Socials/Socials.scss
@@ -12,10 +12,13 @@
 	img,
 	svg {
 		aspect-ratio: 1/1;
+
 		transition: filter 0.2s ease;
 
+		filter: invert(1) brightness(50%);
+
 		&:hover {
-			filter:invert(1);
+			filter: invert(1);
 		}
 	}
 }
