--- a/src/components/features/CategoryRow/CategoryListing/CategoryListing.scss
+++ b/src/components/features/CategoryRow/CategoryListing/CategoryListing.scss
@@ -2,9 +2,9 @@
 	display: flex;
 	align-items: center;
 	padding: 0 2em;
-
+	cursor: pointer;
+	
 	&:hover {
 		background-color: #202020;
-		cursor: default;
 	}
 }
